apps/adguard-home/adguard-home/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
  annotations:
    kube-vip.io/loadbalancerIPs: 10.0.30.102
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-over-tls
      port: 853
      targetPort: 853
      protocol: TCP
    - name: setup
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: dns-over-https
      port: 5443
      targetPort: 5443
      protocol: TCP
    - name: dns-over-quic
      port: 6060
      targetPort: 6060
      protocol: UDP
